2009-09-07  Chris Toshok  <toshok@ximian.com>

	* dependencyobject.cpp (DependencyObject::ProviderValueChanged):
	don't bail out early if both values are null, as the property
	might be AlwaysChange.
	(DependencyObject::ClearValue): same.

	r: kangaroo

2009-09-07  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: the tileLayer parameter is not the number 
	of layers to invalidate.

	r: shana

2009-09-07  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: InvalidateTileLayer no longer invalidate the
	full cache, but only the requested tiles.

	r: shana

2009-09-05  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp:
	* deepzoomimagetilesource.h|cpp: do the same cleaning suffs (clearing
	the cache, aborting the downloaders, invalidating, etc...) on dzits 
	urisource changed that is done on msi sourcechanged.

	r: shana

2009-09-05  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.h|cpp: code reshuffling and refactoring. Move
	the OnSourcePropertyChanged handling outside of OnPropertyChanged.
	No longer keep a source instance variable, as we can get it with
	GetSource ().

	r: jackson

2009-09-04  Larry Ewing  <lewing@novell.com>

	* multiscaleimage.cpp (RenderSingle): clip our rendering to the
	image bounds so that when we are scaling up we don't end up with
	blurry images.

	r: sde

2009-09-04  Stephane Delcroix  <sdelcroix@novell.com>

	* utils.h|cpp: add a void* arg to the Cancellable api

	* application.cpp:  remove the downloader notifications on 
	Cancel ().

2009-09-04  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: on source change, don't only Abort() the
	dlders, but also reset the internal state of the dlders to Free

	r: alan

2009-09-03  Stephane Delcroix  <sdelcroix@novell.com>

	* multiscaleimage.cpp: reset the Viewport to its default values
	on source change. Eventually fixes drt#511.

	r:lewing

2009-09-03  Jeffrey Stedfast  <fejj@novell.com>
