@@ -14,6 +14,7 @@
 #ifndef __DEEPZOOMIMAGETILESOURCE_H__
 #define __DEEPZOOMIMAGETILESOURCE_H__
 
+#include <expat.h>
 #include "multiscalesubimage.h"
 #include "multiscaleimage.h"
 #include "tilesource.h"
@@ -25,30 +26,26 @@ typedef void (*msi_cb) (void *userdata);
 /* @Version=2,Namespace=System.Windows.Media */
 class DeepZoomImageTileSource : public MultiScaleTileSource {
 
-
-	Downloader* downloader;
-
 	msi_cb parsed_callback;
 	msi_cb failed_callback;
 	msi_cb sourcechanged_callback;
 	void *cb_userdata;
 
-	static void downloader_complete (EventObject *sender, EventArgs *calldata, gpointer closure);
-	static void downloader_failed (EventObject *sender, EventArgs *calldata, gpointer closure);
-	void DownloaderComplete ();	
-	void download_uri (const char* url);
 	bool downloaded;
 	bool parsed;
 	char *format;
 	bool nested;
 	GList *display_rects;
+	XML_Parser parser;
 
 	void Init ();
 
-	void Parse (const char* filename);
+	void UriSourceChanged ();	
+	void Abort ();
 
 	bool isCollection;
 	int maxLevel;
+	Cancellable *get_resource_aborter;
 
  protected:
 	virtual ~DeepZoomImageTileSource ();
@@ -66,11 +63,16 @@ class DeepZoomImageTileSource : public MultiScaleTileSource {
 	void strip_and_set_uri (Uri *uri);
 
 	void Download ();
+	void DownloaderComplete ();	
+	void DownloaderFailed ();
 	bool GetTileLayer (int level, int x, int y, Uri *uri);
 	bool IsDownloaded () {return downloaded; }
 	bool IsParsed () {return parsed; }
 
 	virtual void OnPropertyChanged (PropertyChangedEventArgs *args, MoonError *error);
+
+	void XmlWrite (char* buffer, gint32 offset, gint32 n);
+
 	void set_callbacks (msi_cb parsed, msi_cb failed, msi_cb source_changed, void *userdata)
 	{
 		parsed_callback = parsed;
@@ -90,7 +92,6 @@ class DeepZoomImageTileSource : public MultiScaleTileSource {
 	Uri*        GetUriSource ();
 
 	void EndElement (void *info, const char* el);
-		
 };
 
 #endif /* __DEEPZOOMIMAGETILESOURCE_H__ */
