@@ -1,3 +1,11 @@
+2009-09-08  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* deepzoomimagetilesource.h|cpp: replace downloader usage by
+	Application::GetResource (). Parses the xml stream as it comes,
+	instead of all at once.
+
+	r: kangaroo
+
 2009-09-07  Chris Toshok  <toshok@ximian.com>
 
 	* dependencyobject.cpp (DependencyObject::ProviderValueChanged):
